--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>primer pagina</title>
 </head>
 <body>
-    <li>
-        ghghgh
-    </li>
+    <h1>MI PAGINA WEB</h1>
+    <ul>
+        <li><a href="https://google.com" target="_BLANK">Google</a></li>
+        <li><a href="https://facebook.com" target="_BLANK">facebook</a></li>
+    </ul>   
 </body>
 </html>
