--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,5 +12,19 @@
         <li><a href="https://google.com" target="_BLANK">Google</a></li>
         <li><a href="https://facebook.com" target="_BLANK">facebook</a></li>
     </ul>   
+    <div>
+        <ul>
+            <h2>lista</h2>
+            <li>cacauate</li>
+        </ul>
+    </div>
+    <form>
+       <input type="text">
+       <input type="button" value="Bottonsote">
+       <input type="number">
+       <input type="password">
+       <input type="range">
+       <input type="submit">
+    </form>
 </body>
 </html>
