--- a/cuenta.html
+++ b/cuenta.html
@@ -17,14 +17,10 @@
             </ul>
         </nav>
     </header>
-    <article>
-        <section>
-            <h1>esta es mi primer seccion</h1>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium laborum minima eum ex <br> 
-                assumenda veniam maiores pariatur consectetur nulla ratione, quae laudantium, ullam nostrum quas beatae numquam molestias quod quibusdam.
-            </p>
-        </section>
-    </article>
+    <h1>esta es mi cuenta</h1>
+    <p>
+        instagram: @martinmisiones <br>
+        facebook: jajadospuntos 
+    </p>
 </body>
 </html>
