--- a/nosotros.html
+++ b/nosotros.html
@@ -17,14 +17,10 @@
             </ul>
         </nav>
     </header>
-    <article>
-        <section>
-            <h1>esta es mi primer seccion</h1>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium laborum minima eum ex <br> 
-                assumenda veniam maiores pariatur consectetur nulla ratione, quae laudantium, ullam nostrum quas beatae numquam molestias quod quibusdam.
-            </p>
-        </section>
-    </article>
+    <h1>sobre nosotros</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugit, magni ad laboriosam dolore voluptas velit amet et distinctio repellat vitae enim mollitia. Natus quia nihil accusantium eos? Ducimus, modi. <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut voluptates, dolor amet ipsa nesciunt error dolore optio enim architecto quidem minima modi quos temporibus recusandae, hic maiores velit animi. Fugiat.
+    </p>
 </body>
 </html>
