--- a/nosotros.html
+++ b/nosotros.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">home</a></li>
                 <li><a href="cuenta.html">mi cuenta</a></li>
                 <li><a href="nosotros.html">sobre nosotros</a></li>
+                <li><a href="https://google.com">google</a></li>
 
             </ul>
         </nav>
