--- a/nosotros.html
+++ b/nosotros.html
@@ -20,8 +20,7 @@
     </header>
     <h1>sobre nosotros</h1>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugit, magni ad laboriosam dolore voluptas velit amet et distinctio repellat vitae enim mollitia. Natus quia nihil accusantium eos? Ducimus, modi. <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut voluptates, dolor amet ipsa nesciunt error dolore optio enim architecto quidem minima modi quos temporibus recusandae, hic maiores velit animi. Fugiat.
+        Lorem ipsum dolor sit ametLorem ipsum dolor sit amet consectetur adipisicing elit. Aut voluptates, dolor amet ipsa nesciunt error dolore optio enim architecto quidem minima modi quos temporibus recusandae, hic maiores velit animi. Fugiat.
     </p>
 </body>
 </html>
